# openCAS

./: .gitignore  Cargo.toml  advisory_viewer.js  advisory_viewer_bg.wasm  build.rs  flake.nix  index.html  treefmt.toml
.github/workflows/: github-pages.yml  nix-ci.yml
advisory_viewer/: .gitignore  Cargo.toml  flake.nix  index.html
advisory_viewer/docs/: advisory_viewer.js  index.html  sw.js
advisory_viewer/src/: app.rs  lib.rs  main.rs
advisory_viewer/src/app/: hcas.rs  vcas.rs  visualizables.rs  visualize.rs
assets/: short_example.nnet
benches/: cas.rs
cas_calculation/: Cargo.toml
cas_calculation/src/: utils.rs
examples/flightgear/: Cargo.toml
examples/flightgear/src/: main.rs
kd_tree_sort/: Cargo.toml
nnets/: VertCAS_pra01_v4_45HU_200.nnet
opencas/: Cargo.toml  build.rs
opencas/benches/: cas.rs
opencas/snets/: HCAS_safetynet.csv.xz
opencas/src/: inference.rs  lib.rs
safety_net_generator/: Cargo.toml  config.yaml
safety_net_generator/src/: main.rs
src/: inference.rs  lib.rs  parser.rs
