[workspace]
resolver = "2"

members = [
    "opencas",
    "advisory_viewer",
    "cas_calculation",
]


# remove once https://github.com/emilk/egui/pull/1338 lands in a release
[patch.crates-io]
uom = { git = "https://github.com/wucke13/uom.git", branch = "fix-missing-libm" } 

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }
