[package]
name = "advisory_viewer"
version = "0.1.0"
authors = ["Wanja Zaeske <wanja.zaeske@dlr.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
egui = "0.21"
eframe = { version = "0.21", features = [ "persistence" ] }
serde = { version = "1", features = ["derive"] }

opencas = { path = "../opencas" }
uuid = { version = "1", features = [ "v4" ] }
uom.workspace = true
arc-swap = "1.5" #For atomic double buffers
atomic-counter = "1.0" #Track progress of image generator
# ordered-float = "3.4"
strum = { version = "0", features = [ "derive" ] }
# frunk = "0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"
futures = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
getrandom = { version = "*", features = [ "js" ] }
uuid = { version = "*", features = [ "js" ] }