[package]
name = "advisory_viewer"
version = "0.1.0"
authors = ["Wanja Zaeske <wanja.zaeske@dlr.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
egui = "0.22"
eframe = { version = "0.22", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"

serde = { version = "1", features = ["derive"] }


opencas = { path = "../opencas" }
uuid = { version = "1", features = [ "v4", "js" ] }
uom.workspace = true
arc-swap = "1.5" #For atomic double buffers
atomic-counter = "1.0" #Track progress of image generator
strum = { version = "0", features = [ "derive" ] }
futures = "0.3.28"


# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
