[package]
name = "opencas"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
csv = "1"
proc-macro2 = "1"
quote = "1"
kd_tree_sort.workspace = true
serde = { version = "1.0", features = [ "derive" ] }
uom = { workspace = true, default-features = false, features = [ "f32", "si", "std" ] }
xz2 = "0.1"

[dependencies]
nalgebra = { version = "0.33", default-features = false, features = [ "macros" ] }
num = { version = "*", default-features = false, features = [ "libm" ] }
uom = { workspace = true, default-features = false, features = [ "f32", "si" ] }

[dev-dependencies]
criterion = { version = "0.5", features = [ "html_reports" ] } 
rand = "*"

[[bench]]
name = "cas"
harness = false
