[package]
name = "example_flightgear"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uom = "0.33"
futures = "0.3"
async-tungstenite = { version = "0.17", features = [ "async-std-runtime" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
smol = "1.2"
opencas = { path = "../../opencas" }